[workspace]
resolver = "2"
members = [
	"crates/algae-cli",
	"crates/bestool",
	"crates/rpi-st7789v2-driver",
]

[workspace.dependencies]
clap = { version = "4.5.38", features = ["cargo", "derive", "wrap_help"] }
futures = "0.3.30"
indicatif = { version = "0.17.9", features = ["tokio"] }
itertools = "0.14.0"
miette = "7.6.0"
thiserror = "2.0.9"
tokio = "1.45.1"
tokio-util = "0.7.15"
tracing = { version = "0.1.41", features = ["attributes"] }

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
