[workspace]
resolver = "2"
members = [
	"crates/algae-cli",
	"crates/bestool",
	"crates/psql",
	"crates/rpi-st7789v2-driver",
]

[workspace.dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "wrap_help"] }
futures = "0.3.30"
indicatif = { version = "0.18.1", features = ["tokio"] }
itertools = "0.14.0"
miette = "7.6.0"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-util = "0.7.16"
tracing = { version = "0.1.41", features = ["attributes"] }

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.dev.package.fancy-regex]
opt-level = 3

[profile.dev.package.regex-automata]
opt-level = 3
