[workspace]
resolver = "2"
members = [
	"crates/alertd",
	"crates/algae-cli",
	"crates/bestool",
	"crates/postgres",
	"crates/psql",
	"crates/rpi-st7789v2-driver",
]

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "wrap_help"] }
facet = "0.35.0"
futures = "0.3.30"
indicatif = { version = "0.18.2", features = ["tokio"] }
itertools = "0.14.0"
lloggs = "1.3.0"
miette = "7.6.0"
reqwest = { version = "0.12.25", features = ["rustls-tls-native-roots", "json"], default-features = false }
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-util = "0.7.16"
tracing = { version = "0.1.43", features = ["attributes"] }

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
