[package]
name = "bestool-alertd"
version = "0.1.0"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "(Internal) BES tooling: Alert daemon"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/alertd"

[[bin]]
name = "bestool-alertd"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
axum = "0.7.5"
bestool-postgres = { version = "0.1.0", path = "../postgres" }
bytes = "1.9.0"
chrono = "0.4.38"
clap = { workspace = true, optional = true, features = ["env"] }
folktime = "0.2.1"
futures = { workspace = true }
glob = "0.3.3"
humantime = "2.1.0"
jiff = "0.2.15"
lloggs = { version = "1.1.0", optional = true }
mailgun-rs = "2.0.1"
miette = { workspace = true }
notify = "7.0.0"
prometheus = "0.13.4"
pulldown-cmark = "0.12.2"
rand = "0.9.2"
reqwest = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.17"
serde_yaml = "0.9.34"
sysinfo = "0.37.2"
tempfile = "3.21.0"
tera = "1.20.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"

[dev-dependencies]
temp-env = "0.3"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:lloggs", "miette/fancy"]
