[package]
name = "algae-cli"
version = "1.0.8"
edition = "2021"
rust-version = "1.76.0"

authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "Lightweight age profile for user-friendly encryption (CLI tool and library)"
keywords = ["age", "cryptography", "encryption"]
categories = ["command-line-utilities"]
repository = "https://github.com/beyondessential/bestool/tree/main/crates/algae-cli"

[[bin]]
path = "src/main.rs"
name = "algae"

[dependencies]
age = { version = "0.11.1", features = ["async"] }
age-core = "0.11.0"
clap = { workspace = true }
dialoguer = { version = "0.11.0", features = ["password"], default-features = false }
diceware_wordlists = "1.2.3"
futures = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
jiff = "0.2.9"
miette = { workspace = true, features = ["fancy"] }
pinentry = "0.6.0"
rand = "0.9.1"
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }

[build-dependencies]
windows_exe_info = { version = "0.5.1", features = ["manifest"] }
