[package]
name = "bestool-canopy"
version = "0.4.5"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "(Internal) BES tooling: Canopy client"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/canopy"
exclude.workspace = true

[lints]
workspace = true

[dependencies]
algae-cli = { version = "1.1.6", path = "../algae-cli" }
base64 = "0.22.1"
blake3 = "1.8.5"
flate2 = "1.0.34"
futures = { workspace = true, features = ["executor"] }
getrandom = "0.4.2"
hickory-resolver = "0.26.1"
jiff = { version = "0.2.28", features = ["serde"] }
machine-uid = "0.6.0"
miette = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = { workspace = true }
time = "0.3"
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
uuid = { version = "1.23.2", features = ["serde"] }

[dev-dependencies]
tempfile = "3.21.0"

[build-dependencies]
prettyplease = "0.2.37"
schemars = "0.8.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = "2.0.118"
typify = "0.7.0"
ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
