[package]
name = "bestool-kopia"
version = "0.1.0"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "(Internal) BES tooling: shared library for interacting with the kopia CLI"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/kopia"
exclude.workspace = true

[lints]
workspace = true

[features]
default = []
cli = ["dep:clap", "dep:dialoguer"]

[dependencies]
jiff = { version = "0.2.24", features = ["serde"] }
miette = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = { workspace = true }
whoami = "1.6.1"

# cli-only
clap = { workspace = true, optional = true }
dialoguer = { version = "0.12.0", default-features = false, optional = true }
