[package]
name = "bestool-kopia"
version = "0.3.2"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "(Internal) BES tooling: shared library for interacting with the kopia CLI"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/kopia"
exclude.workspace = true

[lints]
workspace = true

[features]
default = []
cli = ["dep:clap", "dep:dialoguer"]
proxy = [
	"dep:hmac",
	"dep:sha2",
	"dep:hex",
	"dep:bytes",
	"dep:tokio",
	"dep:hyper",
	"dep:hyper-util",
	"dep:hyper-rustls",
	"dep:http-body-util",
	"dep:rustls",
]

[dependencies]
bytes = { version = "1.11.1", optional = true }
clap = { workspace = true, optional = true }
dialoguer = { version = "0.12.0", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.9.0", features = ["server", "client", "http1"], optional = true }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "aws-lc-rs", "webpki-tokio"], optional = true }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "server", "tokio"], optional = true }
jiff = { version = "0.2.28", features = ["serde"] }
miette = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = { version = "0.10.9", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros"], optional = true }
tracing = { workspace = true }
whoami = "2.1.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
