[package]
name = "bestool-postgres"
version = "1.0.3"
edition = "2024"
authors = ["Félix Saparelli <felix@passcod.name>", "BES Developers <contact@bes.au>"]
license = "GPL-3.0-or-later"
description = "PostgreSQL connection pool utilities for BES tooling"
repository = "https://github.com/beyondessential/bestool/tree/main/crates/postgres"

[lints]
workspace = true

[dependencies]
bytes = "1.9.0"
fraction = { version = "0.15", features = ["with-postgres-support"] }
hex = "0.4.3"
jiff = "0.2.15"
miette = { workspace = true }
mobc = "0.9.0"
mobc-postgres = { version = "0.9.0", features = ["with-serde_json-1"] }
percent-encoding = "2.3"
rpassword = "7.4.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8.2"
serde_json = "1.0.145"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { version = "0.7.15", features = ["with-jiff-0_2", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
tracing = { workspace = true }

[dev-dependencies]
temp-env = "0.3"
